methods.args.MethodsArgs.scala.code
def move(nbPas : Int , versLAvant : Boolean){
  for (i <- 1 to nbPas){
    if (versLAvant = true){
      avance()
    } else{
      recule()
    }
    
  }
  
}